# mlx-manager

./: .gitignore  .mcp.json  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  codecov.yml
backend/: .encryption_salt  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 9fc5d838420b_initial_schema_with_parser_fields.py  a1b2c3d4e5f6_fix_enum_value_casing.py  b3f7a2c91d4e_phase3_capability_polymorphism.py  c7e4a1b2d3f5_phase4_profile_polymorphism.py  d8e3f5a7b912_add_template_params_and_model_options.py  e1a2b3c4d5f6_add_missing_tables_for_existing_users.py  f2a3b4c5d6e7_add_profile_id_to_backend_mappings.py
backend/app/: __init__.py  config.py  database.py  main.py  models.py
backend/app/routers/: __init__.py  models.py  profiles.py  servers.py  system.py
backend/app/services/: __init__.py  health_checker.py  hf_client.py  launchd.py  server_manager.py
backend/app/utils/: __init__.py  security.py
backend/mlx_manager/: ARCHITECTURE.md  __init__.py  cli.py  config.py  database.py  dependencies.py  logging_config.py  main.py  menubar.py  models.py  types.py
backend/mlx_manager/alembic/: env.py
backend/mlx_manager/alembic/versions/: 9fc5d838420b_initial_schema_with_parser_fields.py  a1b2c3d4e5f6_fix_enum_value_casing.py  b3f7a2c91d4e_phase3_capability_polymorphism.py  c7e4a1b2d3f5_phase4_profile_polymorphism.py  d8e3f5a7b912_add_template_params_and_model_options.py  e1a2b3c4d5f6_add_missing_tables_for_existing_users.py  f2a3b4c5d6e7_add_profile_id_to_backend_mappings.py
backend/mlx_manager/mlx_server/: ARCHITECTURE.md  __init__.py  config.py  database.py  main.py
backend/mlx_manager/mlx_server/api/: __init__.py
backend/mlx_manager/mlx_server/benchmark/: __init__.py  cli.py  runner.py
backend/mlx_manager/mlx_server/errors/: __init__.py  handlers.py  problem_details.py
backend/mlx_manager/mlx_server/middleware/: __init__.py  metrics.py  rate_limit.py  request_id.py  shutdown.py  timeout.py
backend/mlx_manager/mlx_server/models/: __init__.py  audit.py  detection.py  ir.py  pool.py  types.py
backend/mlx_manager/mlx_server/observability/: __init__.py  logfire_config.py
backend/mlx_manager/mlx_server/parsers/: __init__.py  base.py  registry.py  thinking.py  tool_call.py
backend/mlx_manager/mlx_server/schemas/: __init__.py  anthropic.py  openai.py
backend/mlx_manager/mlx_server/services/: __init__.py  audio.py  audit.py  embeddings.py  image_processor.py  inference.py  loading_progress.py  metrics.py  protocol.py  reasoning.py  response_processor.py  structured_output.py  vision.py
backend/mlx_manager/mlx_server/utils/: __init__.py  kv_cache.py  memory.py  metal.py  request_helpers.py  template_params.py  template_tools.py  validation.py
backend/mlx_manager/models/: __init__.py  _domain.py  capabilities.py  entities.py  enums.py  profiles.py  value_objects.py
backend/mlx_manager/models/dto/: __init__.py  auth.py  chat.py  mcp.py  models.py  servers.py  settings.py  system.py
backend/mlx_manager/observability/: __init__.py  logfire_config.py
backend/mlx_manager/routers/: __init__.py  auth.py  chat.py  mcp.py  models.py  profiles.py  servers.py  settings.py  system.py
backend/mlx_manager/services/: __init__.py  auth_service.py  encryption_service.py  health_checker.py  hf_api.py  hf_client.py  launchctl_utils.py  launchd.py  manager_launchd.py  model_probe.py  model_registry.py  parser_options.py  server_manager.py
backend/mlx_manager/services/probe/: __init__.py  audio.py  base.py  coordinator.py  embeddings.py  report.py  service.py  steps.py  strategy.py  sweeps.py  text_gen.py  vision.py
backend/mlx_manager/shared/: __init__.py  cloud_entities.py
backend/mlx_manager/static/: index.html
backend/mlx_manager/static/_app/: version.json
backend/mlx_manager/utils/: __init__.py  command_builder.py  fuzzy_matcher.py  model_detection.py  security.py
backend/tests/: __init__.py  conftest.py  test_auth.py  test_auth_service.py  test_capabilities_endpoint.py  test_chat.py  test_cloud_models.py  test_config.py  test_coverage_gaps.py  test_database.py  test_database_coverage.py  test_dependencies.py  test_detection_detailed.py  test_download_management.py  test_encryption_service.py  test_fuzzy_matcher.py  test_hf_api.py  test_logging_config.py  test_main.py  test_mcp.py  test_model_detection.py  test_model_probe.py  test_model_probe_coverage.py  test_model_registry.py  test_models.py  test_parser_options.py  test_probe_audio.py  test_probe_audit.py  test_probe_base.py  test_probe_coverage_new.py  test_probe_diagnostics.py  test_probe_generation_timeout.py  test_probe_package.py  test_probe_parser_priority.py  test_probe_report_api.py  test_probe_service_coverage.py  test_probe_step_context.py  test_probe_sweep_capabilities.py  test_probe_tool_evidence.py  test_probe_verbose.py  (+15 more)
backend/tests/e2e/: conftest.py  test_audio_e2e.py  test_cross_protocol_e2e.py  test_embeddings_e2e.py  test_vision_e2e.py
backend/tests/fixtures/images/: generate_test_images.py
backend/tests/mlx_server/: __init__.py  conftest.py  test_adapters.py  test_admin.py  test_admin_auth.py  test_anthropic_formatter_coverage.py  test_audio.py  test_audit.py  test_body_limits.py  test_composable_adapters.py  test_composable_coverage.py  test_config_hot_reload.py  test_embeddings.py  test_error_codes.py  test_error_handlers.py  test_formatters.py  test_graceful_shutdown.py  test_image_processor.py  test_inference.py  test_inference_coverage.py  test_ir.py  test_loading_progress.py  test_logfire_config.py  test_memory.py  test_metal_utils.py  test_metrics.py  test_mlx_server_database.py  test_mlx_server_main.py  test_parsers.py  test_pool.py  test_pool_coverage.py  test_rate_limit.py  test_reasoning.py  test_request_id.py  test_response_processor.py  test_response_processor_coverage.py  test_response_processor_golden.py  test_run_in_executor_tokenizer.py  test_strategies.py  test_streaming_timeout_sse.py  (+8 more)
backend/tests/mlx_server/api/: __init__.py
backend/tests/mlx_server/batching/: __init__.py  (+8 more)
(+784 files in other folders)
